fix card gap

--- a/src/components/characterSheet/characterSheet.scss
+++ b/src/components/characterSheet/characterSheet.scss
@@ -39,7 +39,7 @@
     padding: 2rem;
     display: grid;
     grid-auto-columns: minmax(auto, 1fr) 3fr;
-    gap: 1rem;
+    gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
 
     @media only screen and (max-width: 800px) {
